# Tanks

./: .clang-format  .gitignore  CMakeLists.txt  README.md
diagrams/: game_diagram.puml
src/: main.cpp  main.qml  qml.qrc
src/core/: Logger.h
src/core/Engine/: CGameEngine.cpp  CGameEngine.h
src/core/controllers/: CEnemyTanksController.cpp  CEnemyTanksController.h  CGameController.cpp  CGameController.h  CPlayerTankController.cpp  CPlayerTankController.h  CWallController.cpp  CWallController.h
src/core/implementations/: CBase.cpp  CBase.h  CBrickWall.cpp  CBrickWall.h  CBullet.cpp  CBullet.h  CConcreteWall.cpp  CConcreteWall.h  CEnemyTank.cpp  CEnemyTank.h  CPlayerTank.cpp  CPlayerTank.h  CTank.cpp  CTank.h  CTankFactory.cpp  CTankFactory.h  CWall.cpp  CWall.h  CWallFactory.cpp  CWallFactory.h
src/core/implementations/Logger/: LogStream.cpp  LogStream.h  LoggerImpl.cpp  LoggerImpl.h
src/core/interfaces/: IBase.h  IBullet.h  IController.h  IDrawable.h  IMovable.h  ITank.h  ITankFactory.h  IWall.h  IWallFactory.h
src/core/managers/: CControllerManager.cpp  CControllerManager.h  CGameManager.cpp  CGameManager.h  CLevelManager.cpp  CLevelManager.h
src/core/pod/: Direction.h  Enums.h  MapData.h  MapRange.h  Point.h  TankData.h
src/qml/: GameLayer.qml  StartMenuLayer.qml  main.qml
tests/: CMakeLists.txt
